docs & feat: finaliza 1 CRUD e documentação dos endpoints
