# aula 06/controller/atividade/controller_atividade.js
@@ -1,0 +1,215 @@
+/***************************************************************************************************************************************************************************************************************************
+ * Objetivo: Arquivo responsável pela validação, tratamento e 
+ *       manipulação para o CRUD de generos
+ * Data: 13/05/2026
+ * Autor: Brayan
+ * Versão: 1.0
+ ***************************************************************************************************************************************************************************************************************************/
+
+// Import do arquivo de padronização de mensagens JSON (status codes, mensagens de erro e sucesso)
+const config_message = require('../modulo/configMessagens.js')
+
+// Import do arquivo DAO (Data Access Object) responsável por executar as queries no banco de dados MySQL
+const atividadeDAO = require('../../model/DAO/atividade/atividade.js')
+
+
+const inseirNovaAtividade = async function (atividade, contentType) {
+    
+    let messageJson = JSON.parse(JSON.stringify(config_message))
+
+    try {
+
+        if(String(contentType).toUpperCase() == 'APPLICATION/JSON'){
+
+            let validar = await validarDados(atividade)
+
+            if (validar){
+                return validar
+            } else {
+
+                let result = await atividadeDAO.incertAtividade(atividade)
+
+                if (result) {
+                    atividade.id = result
+                    messageJson.DEFAULT_MESSAGE.status      = messageJson.SUCCES_CREATED_ITEM.status
+                    messageJson.DEFAULT_MESSAGE.status_code = messageJson.SUCCES_CREATED_ITEM.status_code
+                    messageJson.DEFAULT_MESSAGE.message     = messageJson.SUCCES_CREATED_ITEM.message
+                    messageJson.DEFAULT_MESSAGE.response    = atividade
+                } else {
+                    
+                    
+                    return messageJson.ERROR_INTERNAL_SERVER_MODEL // HTTP 500
+                }
+
+                return messageJson.DEFAULT_MESSAGE
+            }
+
+        } else {
+            return messageJson.ERROR_CONTENT_TYPE //415
+        }
+
+    } catch (error) {
+        return messageJson.ERROR_INTERNAL_SERVER_CONTROLLER //500(controller)
+    }
+}
+
+const atualizarAtividade = async function(atividade, id , contentType) {
+
+    let messageJson = JSON.parse(JSON.stringify(config_message))
+
+    try {
+
+        if(String(contentType).toUpperCase() == 'APPLICATION/JSON'){
+
+            let resultBuscarID = await buscarAtividade(id)
+
+            if(resultBuscarID.status){
+                let validar = await validarDados(atividade)
+
+                if(!validar){
+                    atividade.id = id
+
+                    let result = await atividadeDAO.updateAtividade(atividade)
+
+                    if(result){
+                        messageJson.DEFAULT_MESSAGE.status      = messageJson.SUCCES_UPDATED_ITEM.status
+                        messageJson.DEFAULT_MESSAGE.status_code = messageJson.SUCCES_UPDATED_ITEM.status_code
+                        messageJson.DEFAULT_MESSAGE.message     = messageJson.SUCCES_UPDATED_ITEM.message
+                        messageJson.DEFAULT_MESSAGE.response    = atividade
+
+                        return messageJson.DEFAULT_MESSAGE
+
+                    } else {
+                        return messageJson.ERROR_INTERNAL_SERVER_CONTROLLER //500
+                    }
+                } else {
+                    return validar //400
+                }
+            } else {
+                return resultBuscarID //400 ou 404 ou 500
+            }
+
+        } else {
+            return messageJson.ERROR_CONTENT_TYPE //415
+        }
+        
+    } catch (error) {
+
+        return messageJson.ERROR_INTERNAL_SERVER_CONTROLLER
+    }
+
+}
+
+
+const listarAtividade = async function() {
+
+    let messageJson = JSON.parse(JSON.stringify(config_message))
+
+    try {
+        let result = await atividadeDAO.selectAllAtividade()
+        
+        if(result){
+            if(result.length > 0){  
+                messageJson.DEFAULT_MESSAGE.status          = messageJson.SUCCES_RESPONSE.status
+                messageJson.DEFAULT_MESSAGE.status_code     = messageJson.SUCCES_RESPONSE.status_code
+                messageJson.DEFAULT_MESSAGE.response.count  = result.length
+                messageJson.DEFAULT_MESSAGE.response.generos = result
+
+                return messageJson.DEFAULT_MESSAGE
+                
+            } else {
+                return messageJson.ERROR_NOT_FOUND
+            }
+        } else {
+            return messageJson.ERROR_INTERNAL_SERVER_MODEL // 500
+        }
+
+    } catch (error) {
+        return messageJson.ERROR_INTERNAL_SERVER_CONTROLLER //500(controller)
+    }
+
+}
+
+
+const buscarAtividade = async function(id) {
+
+    let messageJson = JSON.parse(JSON.stringify(config_message))
+
+    try {
+        if(id == undefined || id == '' || id == null || isNaN(id)){
+            messageJson.ERROR_BAD_REQUEST.field = '[ID INVÁLIDO]'
+            return messageJson.ERROR_BAD_REQUEST //400
+        } else {
+            let result = await atividadeDAO.selectByIdAtividade(id)
+
+            if(result){
+                if(result.length > 0){
+                    messageJson.DEFAULT_MESSAGE.status              = messageJson.SUCCES_RESPONSE.status
+                    messageJson.DEFAULT_MESSAGE.status_code         = messageJson.SUCCES_RESPONSE.status_code
+                    messageJson.DEFAULT_MESSAGE.response.genero     = result
+
+                    return messageJson.DEFAULT_MESSAGE //200
+                } else {
+                    return messageJson.ERROR_NOT_FOUND //404
+                }
+            } else {
+                return messageJson.ERROR_INTERNAL_SERVER_MODEL //500 (model)
+            }
+        }
+        
+    } catch (error) {
+        return messageJson.ERROR_INTERNAL_SERVER_CONTROLLER //500(controller)
+    }
+
+}
+
+
+const excluirAtividade = async function(id) { 
+    let messageJson = JSON.parse(JSON.stringify(config_message))
+
+    try {
+        let resultBuscarID = await buscarAtividade(id)
+        
+        if(resultBuscarID.status){
+            let result = await atividadeDAO.deleteAtividade(id)
+
+            if(result){
+                return messageJson.SUCCES_DELETE_ITEM  //200
+            } else {
+                return messageJson.ERROR_INTERNAL_SERVER_MODEL // 500
+            }
+        } else {
+            return resultBuscarID // 404
+        }
+
+    } catch (error) {
+        return messageJson.ERROR_INTERNAL_SERVER_CONTROLLER // 500
+    }
+}
+ 
+   
+const validarDados = async function(genero) {
+
+    let messageJson = JSON.parse(JSON.stringify(config_message))
+    
+    if (!genero) {
+        return messageJson.ERROR_BAD_REQUEST
+    }
+
+    if (genero.nome == undefined || genero.nome == '' || genero.nome == null || genero.nome.length > 45) {
+        messageJson.ERROR_BAD_REQUEST.field = '[NOME] INVÁLIDO'
+        return messageJson.ERROR_BAD_REQUEST  // HTTP 400
+    } else {
+        return false
+    }
+
+}
+
+
+module.exports = {
+    inseirNovaAtividade,
+    atualizarAtividade,
+    listarAtividade,
+    buscarAtividade,
+    excluirAtividade
+}
