# aula 06/doc/openapi.yaml
@@ -639,6 +639,129 @@ paths:
         '500':
           description: Erro interno no servidor
 
+  # ==================== ATIVIDADE ====================
+  /v1/senai/atividade:
+    post:
+      tags:
+        - Atividade
+      summary: Adiciona uma nova atividade
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AtividadeInput'
+        required: true
+      responses:
+        '201':
+          description: Atividade criada com sucesso
+
+        '400':
+          description: Dados inválidos
+      
+        '415':
+          description: Content-Type inválido
+    
+        '500':
+          description: Erro interno no servidor
+        
+
+    get:
+      tags:
+        - Atividade
+      summary: Lista todas as Atividades
+      responses:
+        '200':
+          description: Listagem realizada com sucesso
+         
+        '404':
+          description: Nenhuma Atividade encontrada
+         
+        '500':
+          description: Erro interno no servidor
+         
+
+  /v1/senai/atividade/{id}:
+    get:
+      tags:
+        - Atividade
+      summary: Busca uma atividade pelo ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Atividade encontrada
+
+        '400':
+          description: ID inválido
+         
+        '404':
+          description: Atividade não encontrada
+        
+        '500':
+          description: Erro interno no servidor
+         
+
+    put:
+      tags:
+        - Atividade
+      summary: Atualiza uma atividade pelo ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/AtividadeInput'
+        required: true
+      responses:
+        '200':
+          description: Atividade atualizada com sucesso
+   
+        '400':
+          description: Dados ou ID inválidos
+        
+        '404':
+          description: Atividade não encontrada
+       
+        '415':
+          description: Content-Type inválido
+         
+        '500':
+          description: Erro interno no servidor
+       
+
+    delete:
+      tags:
+        - Atividade
+      summary: Exclui uma atividade pelo ID
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Atividade excluída com sucesso
+      
+        '400':
+          description: ID inválido
+    
+        '404':
+          description: Atividade não encontrada
+   
+        '500':
+          description: Erro interno no servidor
+
+
 
 # ==================== SCHEMAS ====================
 components:
@@ -694,7 +817,7 @@ components:
       properties:
         nome:
           type: string
-          example: Neo
+          example: Cirilo
 
     GeneroInput:
       required:
@@ -714,3 +837,13 @@ components:
           type: string
           maxLength: 50
           example: Brasileiro
+
+    AtividadeInput:
+      required:
+        - nome
+      type: object
+      properties:
+        nome:
+          type: string
+          maxLength: 45
+          example: Ator
